--- a/app/views/bookmark.ejs
+++ b/app/views/bookmark.ejs
@@ -14,11 +14,15 @@
 
         <div class="row">
 
-            <% if (bookmarkList.length === 0) { %>
+          <% if (bookmarkList === undefined) { %>
 
-                <h1>Vous n'avez pas de favoris</h1>
+            <h1>Vous n'avez pas de favoris</h1>
+            
+          <% } else if (bookmarkList.length === 0) { %>
+
+            <h1>Vous n'avez pas de favoris</h1>
              
-            <% } else { %>
+          <% } else { %>
                 <% bookmarkList.forEach(element => { %>
 
                     <div class="col-lg-4 col-md-6 mb-4">
